# 011_Fyers_PlaceMultipleAccount_OrderForge

./: .gitignore  README.md  config.py  database.py  fyers_client.py  fyers_orders.sqbpro  main.py  models.py  pyproject.toml  schemas.py  token_scheduler.py
backup/: index.html  main.py  place_mutiAccountOrder.py  place_mutiAccountOrder_OOP.py  pyproject.toml  requirements.txt
routers/: __init__.py  accounts.py  orders.py  tokens.py
static/: app.js  style.css
templates/: index.html
